fix: Change overflow-y property from scroll to auto for pp-container

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ h6 {
 .pp-container {
   margin-left: auto;
   max-height: calc(100vh - 80px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0;
   margin-right: 0;
   width: 100%;
